--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>Homework 11</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous" />
@@ -13,9 +13,10 @@
   <body>
       <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
       <include src="./partials/search-form.html"></include>
-    
-      <!-- Карточки изображений -->
-    </div>
+      <include src="./partials/gallerycard.html"></include>
+      <include src="./partials/load-more.html"></include>
+ 
+
     <script src="index.js"></script>
   </body>
 </html>
